Fixing typo in installation instructions

--- a/notebooks/1.1_installation.ipynb
+++ b/notebooks/1.1_installation.ipynb
@@ -53,9 +53,9 @@
    "source": [
     "### MacOS\n",
     "\n",
-    "On MacOS `gfortran` can be installed in the terminal with\n",
+    "To install `gfortran` on MacOS it is best to use [Homebrew](https://brew.sh/). Then type in your terminal\n",
     "\n",
-    "`sudo xcode-select —install`  \n",
+    "`sudo xcode-select --install`  \n",
     "`brew install gfortran`"
    ]
   },
