--- a/notebooks/1.1_installation.ipynb
+++ b/notebooks/1.1_installation.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "## RADMC-3D\n",
     "\n",
-    "If you want to follow the examples involving radiative transfer modeling with [RADMC-3D](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/), you have to install is manually. Please follow the [installation instructions](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/manual_radmc3d/installation.html) provided in the [RADMC-3D documentation](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/manual_radmc3d/index.html).\n",
+    "If you want to follow the examples involving radiative transfer modeling with [RADMC-3D](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/), you have to install it manually. Please follow the [installation instructions](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/manual_radmc3d/installation.html) provided in the [RADMC-3D documentation](https://www.ita.uni-heidelberg.de/~dullemond/software/radmc-3d/manual_radmc3d/index.html).\n",
     "\n",
     "In short this would be as follows:\n",
     "\n",
