Restructuring fo file structure and addition of DustPy basics

--- a/notebooks/2_tutorial/2.1_simframe.ipynb
+++ b/notebooks/2_tutorial/2.1_simframe.ipynb
@@ -591,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.writer.datadir = \"tutorial_simframe\"\n",
+    "sim.writer.datadir = \"simframe\"\n",
     "sim.writer.overwrite = True"
    ]
   },
@@ -659,28 +659,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing file \u001b[94mtutorial_simframe/data0000.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0001.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0002.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0003.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0004.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0005.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0006.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0007.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0008.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0009.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
-      "Writing file \u001b[94mtutorial_simframe/data0010.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mtutorial_simframe/frame.dmp\u001b[0m\n",
+      "Creating data directory 'simframe'.\n",
+      "Writing file \u001b[94msimframe/data0000.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0001.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0002.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0003.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0004.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0005.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0006.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0007.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0008.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0009.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
+      "Writing file \u001b[94msimframe/data0010.hdf5\u001b[0m\n",
+      "Writing dump file \u001b[94msimframe/frame.dmp\u001b[0m\n",
       "Execution time: \u001b[94m0:00:00\u001b[0m\n"
      ]
     }
@@ -712,7 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wrtr = writers.hdf5writer(datadir=\"tutorial_simframe\")"
+    "wrtr = writers.hdf5writer(datadir=\"simframe\")"
    ]
   },
   {
