Modification to basics notebook

--- a/notebooks/2_tutorial/2.2_dustpy_basics.ipynb
+++ b/notebooks/2_tutorial/2.2_dustpy_basics.ipynb
@@ -514,7 +514,6 @@
       "            m[110] =  5.18e+03 g    with\n",
       "            m[118] =  7.20e+04 g\n",
       "\u001b[0m\n",
-      "Creating data directory 'basics'.\n",
       "Writing file \u001b[94mbasics/data0000.hdf5\u001b[0m\n",
       "Writing dump file \u001b[94mbasics/frame.dmp\u001b[0m\n",
       "Writing file \u001b[94mbasics/data0001.hdf5\u001b[0m\n",
@@ -539,7 +538,7 @@
       "Writing dump file \u001b[94mbasics/frame.dmp\u001b[0m\n",
       "Writing file \u001b[94mbasics/data0011.hdf5\u001b[0m\n",
       "Writing dump file \u001b[94mbasics/frame.dmp\u001b[0m\n",
-      "Execution time: \u001b[94m0:03:12\u001b[0m\n"
+      "Execution time: \u001b[94m0:02:25\u001b[0m\n"
      ]
     }
    ],
@@ -685,7 +684,7 @@
    "id": "8397b3ca-f7bc-4110-b850-5476040200ce",
    "metadata": {},
    "source": [
-    "## Resuming simulations"
+    "## Do-it-yourself"
    ]
   },
   {
@@ -722,101 +721,7 @@
    "id": "10029aa6-1ae9-4937-b94d-5892c1d95525",
    "metadata": {},
    "source": [
-    "Now we add a new snapshot at the end of the simulation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a1e4daa7-4d63-4083-8dca-547e970d67f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sim_reload.t.snapshots = np.append(sim_reload.t.snapshots, 1.1*sim_reload.t)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2e7f52a-8337-49ab-b42a-69ae79ee41a4",
-   "metadata": {},
-   "source": [
-    "We can now restart the simulation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "792bcdc6-ed54-4b84-a476-dbd104d1c44c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "DustPy v1.0.4\n",
-      "\n",
-      "Documentation: https://stammler.github.io/dustpy/\n",
-      "PyPI:          https://pypi.org/project/dustpy/\n",
-      "GitHub:        https://github.com/stammler/dustpy/\n",
-      "\u001b[94m\n",
-      "Please cite Stammler & Birnstiel (2022).\u001b[0m\n",
-      "\n",
-      "\u001b[93mChecking for mass conservation...\n",
-      "\u001b[0m\n",
-      "\u001b[93m    - Sticking:\u001b[0m\n",
-      "\u001b[0m        max. rel. error: \u001b[92m 2.81e-14\u001b[0m\n",
-      "        for particle collision\n",
-      "            m[114] =  1.93e+04 g    with\n",
-      "            m[116] =  3.73e+04 g\u001b[0m\n",
-      "\u001b[93m    - Full fragmentation:\u001b[0m\n",
-      "\u001b[0m        max. rel. error: \u001b[92m 4.44e-16\u001b[0m\n",
-      "        for particle collision\n",
-      "            m[47] =  5.18e-06 g    with\n",
-      "            m[54] =  5.18e-05 g\u001b[0m\n",
-      "\u001b[93m    - Erosion:\u001b[0m\n",
-      "\u001b[0m        max. rel. error: \u001b[92m 1.78e-15\u001b[0m\n",
-      "        for particle collision\n",
-      "            m[110] =  5.18e+03 g    with\n",
-      "            m[118] =  7.20e+04 g\n",
-      "\u001b[0m\n",
-      "Writing file \u001b[94mbasics/data0012.hdf5\u001b[0m\n",
-      "Writing dump file \u001b[94mbasics/frame.dmp\u001b[0m\n",
-      "Execution time: \u001b[94m0:00:11\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "sim_reload.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3014b02e-bc6b-4d7b-a9d1-6bf573b74c8f",
-   "metadata": {},
-   "source": [
-    "Time has now progressed further than in the previous simulation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "65bb8c94-3530-40b2-b479-3b95760e06a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11000.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sim_reload.t/c.year"
+    "Extend the simulation by appending another snapshot to the snapshot array and re-start the simulation. Assure yourself that the time of the simulation object after the extended simulation has progressed."
    ]
   }
  ],
