Fixing projeect notebooks

--- a/notebooks/3_projects/3.4_irradiation.ipynb
+++ b/notebooks/3_projects/3.4_irradiation.ipynb
@@ -5,7 +5,7 @@
    "id": "40a1f3f9-7458-40a8-aed2-a5edefb36ea8",
    "metadata": {},
    "source": [
-    "# Irradiation"
+    "# Stellar Irradiation"
    ]
   },
   {
