correction to spectral index project

--- a/notebooks/3_projects/3.1_spectral_index.ipynb
+++ b/notebooks/3_projects/3.1_spectral_index.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "$\\Large \\alpha_\\mathrm{mm} = -\\frac{\\mathrm{d} \\log F_\\nu}{\\mathrm{d} \\log \\nu} = 3 - \\frac{x}{e^x-1} + \\beta\\frac{\\tau_\\nu}{e^{\\tau_\\nu}-1}$\n",
     "\n",
-    "with $x=\\frac{h\\nu}{k_\\mathrm{B}T}$ and assuming the opacity being a power law $\\kappa_\\nu \\propto \\nu^\\beta$. In the long-wavelength limit $\\left(x \\ll 1\\right)$ and for large optical depths $\\left( \\tau_\\nu \\gg 1 \\right)$ the spectral index will approch $\\alpha_\\mathrm{mm}=2$.\n",
+    "with $x=\\frac{h\\nu}{k_\\mathrm{B}T}$ and assuming the opacity being a power law $\\kappa_\\nu \\propto \\nu^{-\\beta}$. In the long-wavelength limit $\\left(x \\ll 1\\right)$ and for large optical depths $\\left( \\tau_\\nu \\gg 1 \\right)$ the spectral index will approch $\\alpha_\\mathrm{mm}=2$.\n",
     "\n",
     "The exponent $\\beta$ depends on the particle size distribution, especially on the maximum particle size and can be used to infer particle sizes from observations (c.f. [Birnstiel et al., 2018](https://ui.adsabs.harvard.edu/abs/2018ApJ...869L..45B/abstract), their figure 4)."
    ]
